--- a/files/masto.html
+++ b/files/masto.html
@@ -1,3 +1,3 @@
-<a rel="me" href="https://mastodon.mit.edu/@chris">@chris@mastodon.mit.edu</a>
-<a rel="me" href="https://qoto.org/@chris234">@chris234@qoto.org</a>
-<a rel="me" href="https://better.boston/@chris234">@chris234@better.boston</a>
+<a rel="me" href="https://mastodon.mit.edu/@chris">@chris@mastodon.mit.edu</a><br>
+<a rel="me" href="https://qoto.org/@chris234">@chris234@qoto.org</a><br>
+<a rel="me" href="https://better.boston/@chris234">@chris234@better.boston</a><br>
